# robot_ws

./: .gitignore  README.md  configuration.yml  launch.sh  rapport.txt
Documentation/: Problèmes réccurents.md  (+5 more)
client_ws/src/web_control/: package.xml  setup.py
client_ws/src/web_control/launch/: web_control_full.launch.py
client_ws/src/web_control/web/: configuration.json  index.html  style.css
client_ws/src/web_control/web/accueil/: ._page_presentation.html  page_presentation.html
client_ws/src/web_control/web/galerie/: gallery.html
client_ws/src/web_control/web/js/: 01-core-ros.js  02-PTZ.js  03-communication-avec-robot.js  04-media-gallery.js  05-trajectoires.js  06-UI-minimap.js
client_ws/src/web_control/web/navig/: blank_area.json  config.json  config.txt  navig.css  navig.html  navig.js
client_ws/src/web_control/web/terminal/: terminal.html  terminal.js
client_ws/src/web_control/web_control/: backend_node.py  camera_publisher.py  capture_manager.py  gallery_manager.py
robot_ws/src/openzenros2/: package.xml
robot_ws/src/openzenros2/launch/: openzen_lpms.launch.py
robot_ws/src/openzenros2/openzen/: .gitignore  README.md  bitbucket-pipelines.yml
robot_ws/src/openzenros2/openzen/bindings/OpenZenCSharp/: EZenSensorProperty.cs  OpenZenFloatArray.cs  OpenZen_wrap_csharp.cxx  ZenError.cs  ZenEventData_SensorListingProgress.cs  ZenEventType.cs  ZenGnssData.cs  ZenGnssFixCarrierPhaseSolution.cs  ZenGnssFixType.cs
robot_ws/src/openzenros2/openzen/docs/: data.rst  examples.rst  io_systems.rst  supported_sensors.rst
robot_ws/src/openzenros2/openzen/examples/: ExampleCAPI.c
robot_ws/src/openzenros2/openzen/examples/ExampleCSharp/OpenZenCSharp/: Program.cs
robot_ws/src/openzenros2/openzen/include/: OpenZen.h  OpenZenCAPI.h
robot_ws/src/openzenros2/openzen/src/: Sensor.cpp  Sensor.h  ZenTypesHelpers.h
robot_ws/src/openzenros2/openzen/src/bindings/: OpenZenPython.cpp
robot_ws/src/openzenros2/openzen/src/communication/: Modbus.cpp  Modbus.h  ModbusCommunicator.cpp  ModbusCommunicator.h  SyncedModbusCommunicator.cpp  SyncedModbusCommunicator.h
robot_ws/src/openzenros2/openzen/src/components/: GnssComponent.cpp  GnssComponent.h  ImuIg1Component.h  SensorParsingUtil.h
robot_ws/src/openzenros2/openzen/src/components/factories/: ImuComponentFactory.cpp
robot_ws/src/openzenros2/openzen/src/io/: IoManager.h
robot_ws/src/openzenros2/openzen/src/io/interfaces/: TestSensorInterface.cpp  ZeroMQInterface.cpp
robot_ws/src/openzenros2/openzen/src/io/systems/: SiUsbSystem.h
robot_ws/src/openzenros2/openzen/src/properties/: Ig1CoreProperties.cpp  Ig1GnssProperties.cpp  Ig1GnssProperties.h  ImuSensorPropertiesV0.h
robot_ws/src/openzenros2/openzen/src/test/components/: ImuIg1ComponentTest.cpp
src/curt_mini/curt_mini/: CMakeLists.txt  curt_mini.repos  package.xml
src/curt_mini/curt_mini/bringup/: curt_mini.perspective  curt_mini.rviz  plotjuggler.xml
src/curt_mini/curt_mini/config/: twist_mux.yaml
src/curt_mini/curt_mini/doc/: conf.py  motor_control.rst  software_setup.rst
src/curt_mini/curt_mini/maps/: map.yaml  normal_map.pgm
src/curt_mini/curt_mini/models/curt_mini/: robot.urdf.xacro  ros2_control.xacro
src/curt_mini/curt_mini/models/curt_mini/meshes/: wheel2_link.STL  wheel3_link.STL
src/curt_mini/curt_mini/models/curt_mini/worlds/: world.sdf
src/curt_mini/curt_mini/models/map_plane/: model.sdf
src/curt_mini/ipa_ros2_control/: CMakeLists.txt  README.md  package.xml
src/curt_mini/ipa_ros2_control/launch/: ros2_control.launch.py
src/curt_mini/ipa_ros2_control/src/: curt_mini_hardware_interface.cpp
src/navigation_pkg/: package.xml  setup.py
src/navigation_pkg/config/: nav2_params.yaml
src/navigation_pkg/launch/: global_launch.py  nav2_minimal.launch.py
src/navigation_pkg/maps/: map.pgm  right_map.pgm
src/navigation_pkg/navigation_pkg/: waypoint_action_server.py
src/navigation_pkg/rviz/: config.rviz
src/navigation_pkg/src/description/: curt_mini.sdf  curt_mini.urdf
src/openzenros2/: CHANGELOG.rst  CMakeLists.txt  README.md
src/openzenros2/openzen/: CMakeLists.txt
src/openzenros2/openzen/bindings/OpenZenCSharp/: EZenGnssProperty.cs  EZenImuProperty.cs  OpenZen.cs  OpenZenPINVOKE.cs  SWIGTYPE_p_p_ZenComponentHandle.cs  SWIGTYPE_p_unsigned_long.cs  ZenAsyncStatus.cs  ZenClientHandle_t.cs  ZenComponentHandle_t.cs  ZenEvent.cs  ZenEventData.cs  ZenEventData_SensorDisconnected.cs  ZenImuData.cs  ZenLogLevel.cs  ZenOrientationOffsetMode.cs  ZenPropertyType.cs  ZenSensorDesc.cs  ZenSensorHandle_t.cs  ZenSensorInitError.cs
src/openzenros2/openzen/docs/: getting_started.rst  index.rst  python_api.rst  ros.rst
src/openzenros2/openzen/examples/: CMakeLists.txt  ExampleCpp17.cpp  ExamplePython.py  main.cpp
src/openzenros2/openzen/examples/VisualStudio2017-OpenZenExample/OpenZenExample/: OpenZenExample.cpp
src/openzenros2/openzen/include/: ZenTypes.h
src/openzenros2/openzen/src/: InternalTypes.h  OpenZen.cpp  SensorComponent.h  SensorConfig.h  SensorManager.cpp  SensorProperties.cpp
src/openzenros2/openzen/src/communication/: ConnectionNegotiator.cpp  ConnectionNegotiator.h
src/openzenros2/openzen/src/components/: ImuComponent.cpp  ImuComponent.h  ImuIg1Component.cpp
src/openzenros2/openzen/src/components/factories/: GnssComponentFactory.cpp
src/openzenros2/openzen/src/io/: IoManager.cpp
src/openzenros2/openzen/src/io/interfaces/posix/: PosixDeviceInterface.cpp
src/openzenros2/openzen/src/io/systems/: SiUsbSystem.cpp
src/openzenros2/openzen/src/io/systems/windows/: EnumerateSerialPorts.cpp
src/openzenros2/openzen/src/properties/: BaseSensorPropertiesV0.h  GnssSensorPropertiesV1.h  Ig1ImuProperties.cpp  ImuPropertyRulesV1.h  ImuSensorPropertiesV1.h  LegacyImuProperties.cpp
src/openzenros2/openzen/src/streaming/: StreamingProtocol.h  ZenTypesSerialization.h
src/openzenros2/openzen/src/test/communication/: MockbusCommunicator.h
src/openzenros2/openzen/src/test/streaming/: SerializationTest.cpp  ZeroMQStreamingTest.cpp
src/openzenros2/src/: OpenZenNode.cpp
src/openzenros2/test/: openzen_test.launch.py
(+113 files in other folders)
